--- a/css/style.css
+++ b/css/style.css
@@ -445,6 +445,7 @@ footer a:hover{
     }
     header h2{
         font-size: 28px;
+        font-weight: 600;
     }
     header nav{
         position: absolute;
